recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: reassignment to val
		steps = steps -1;
                      ^